fix: Card not showing at 720px
Changed hide util class to have the correct media query max width
to ensure the card is shown at 720px

--- a/src/app/styles/components/_subTeamCard.scss
+++ b/src/app/styles/components/_subTeamCard.scss
@@ -168,7 +168,7 @@
 }
 
 .hide {
-  @media (max-width: 720px) {
+  @media (max-width: 719px) {
     display: none;
   }
 }
